update template, migrate to bower, replace chosen with selec2, update dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 .sass-cache
 /media/styles
 __pycache__
+/media/less/bootstrap
+/media/less/bootstrap-chosen
+/media/css/bootstrap.css
+/media/components
