--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": ">=3.0",
+    "bootstrap": "~3.1.1",
     "jquery": ">=1.8.3",
     "select2": ">=3.4.3",
     "noty": ">=2.1.0"
