--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,9 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.1.1",
-    "jquery": ">=1.8.3",
-    "select2": ">=3.4.3",
-    "noty": ">=2.1.0"
+    "bootstrap": "3.3.4",
+    "jquery": "2.1.4",
+    "select2": "4.0.0",
+    "noty": "2.3.5"
   }
 }
