--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = app.settings.test
+norecursedirs = .svn .git .idea db docs media pyve ve ve3 venv venv3 scripts templates
+                requirements
+python_files = *tests.py
