--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ language: python
 python:
   - "2.7"
   - "3.3"
+  - "3.4"
 
 install:
   - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install -r requirements/base.txt; fi"
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.3' ]]; then pip install -r requirements/base-py3.txt; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then pip install -r requirements/base-py3.txt; fi"
 
 script:
   - "./scripts/run_tests.sh"
