--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,12 @@ python:
   - "3.4"
 
 install:
-  - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install -r requirements/base.txt; fi"
-  - "if [[ $TRAVIS_PYTHON_VERSION == '3.3' ]]; then pip install -r requirements/base-py3.txt; fi"
-  - "if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then pip install -r requirements/base-py3.txt; fi"
-  pip install coveralls
-
+  - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install -r requirements/base.txt; pip install coveralls; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.3' ]]; then pip install -r requirements/base-py3.txt; pip install coveralls; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then pip install -r requirements/base-py3.txt; pip install coveralls; fi"
+  - pip install coveralls
 script:
   - "./scripts/run_pytest.sh"
 
 after_success:
-    COERALLS_REPO_TOKEN=LcHkYOvfnUo5Vicw7j8OroDSYjc9U75iV coveralls
+  - COERALLS_REPO_TOKEN=LcHkYOvfnUo5Vicw7j8OroDSYjc9U75iV coveralls
