--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - "if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then pip install -r requirements/base-py3.txt; pip install coveralls; fi"
   - pip install coveralls
 script:
-  - "./scripts/run_pytest.sh"
+  - "coverage run --source=apps -m py.test"
 
 after_success:
   - COERALLS_REPO_TOKEN=LcHkYOvfnUo5Vicw7j8OroDSYjc9U75iV coveralls
