--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "bootstrap": "3.3.4",
     "jquery": "2.1.4",
     "select2": "4.0.0",
-    "noty": "2.3.5"
+    "noty": "2.3.5",
+    "select2-bootstrap-css": "~1.4.6"
   }
 }
