--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ language: python
 
 python:
   - "2.7"
-  - "3.3"
   - "3.4"
+  - "3.5"
 
 install:
-  - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install -r requirements/base.txt; pip install coveralls; fi"
-  - "if [[ $TRAVIS_PYTHON_VERSION == '3.3' ]]; then pip install -r requirements/base-py3.txt; pip install coveralls; fi"
-  - "if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then pip install -r requirements/base-py3.txt; pip install coveralls; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install -r requirements/base.txt; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then pip install -r requirements/base.txt; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.5' ]]; then pip install -r requirements/base.txt; fi"
   - pip install coveralls
 script:
   - "coverage run --source=apps -m py.test"
